tests/baselines/reference/forInStrictNullChecksNoError.errors.txt
forInStrictNullChecksNoError.ts(5,5): error TS18049: 'x' is possibly 'null' or 'undefined'.


==== forInStrictNullChecksNoError.ts (1 errors) ====
    function f(x: { [key: string]: number; } | null | undefined) {
        for (const key in x) {  // 1
            console.log(x[key]);  // 2
        }
        x["no"]; // should still error
        ~
!!! error TS18049: 'x' is possibly 'null' or 'undefined'.
    }